Issue tracker at http://code.google.com/p/pyftpdlib/issues/list


History
=======

Version: 0.5.2 - Date: 2009-XX-XX
---------------------------------

Enhancements:

 * Issue #103: added unix_daemon.py script.

 * Issue #107: a new ThrottledDTPHandler class has been added for limiting the
   speed of downloads and uploads.

Bugfixes:

 * Issue #100: fixed a race condition in FTPHandler constructor which could
   throw an exception in case of connection bashing (DoS).  (thanks Bram Neijt)

 * Issue #102: FTPServer.close_all() now removes any unfired delayed call left
   behind to prevent potential memory leaks.

 * Issue #104: fixed a bug in FTPServer.handle_accept() where socket.accept()
   could return None instead of a valid address causing the server to crash.
   (OS X only, reported by Wentao Han)

 * Issue #104: an EPIPE socket exception might be thrown by asyncore.recv()
   when dealing with ill-behaved clients on OS X . (reported by Wentao Han)

 * Issue #105: ECONNABORTED might be thrown by socket.accept() on FreeBSD
   causing the server to crash.

 * Issue #111: the license used was not MIT as stated in source files.

 * Issue #112: fixed a MDTM related test case failure occurring on 64 bit OSes.

 * Issue #113: fixed unix_ftp.py which was treating anonymous as a normal user.

 * Issue #114: MLST is now denied unless the "l" permission has been specified
   for the user.

 * Issue #115: asyncore.dispatcher.close() is now called before doing any other
   cleanup operation when client disconnects. This way we avoid an endless loop
   which hangs the server in case an exception is raised in close() method.
   (thanks Arkadiusz Wahlig)

 * Issue #116: extra carriage returns were added to files transferred in ASCII
   mode.

 * Issue #118: CDUP always changes to "/".

 * Issue #119: QUIT sent during a transfer caused a memory leak.


API changes since 0.5.1:

 * ThrottledDTPHandler class has been added.

 * FTPHandler.process_command() method has been added.
